all po files updated from develop at 2019-10-26 09:36

--- a/po/lt.po
+++ b/po/lt.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PLi enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-09-29 09:27+0200\n"
+"POT-Creation-Date: 2019-10-26 09:34+0200\n"
 "PO-Revision-Date: 2019-03-05 15:26+0200\n"
 "Last-Translator: Audronis Grincevicius <adga45@gmail.com>\n"
 "Language-Team: Adga (C) <adga45@gmail.com>\n"
@@ -2352,6 +2352,9 @@ msgstr "Uždengti punktyrinę, mirgančią liniją šiam kanalui"
 msgid "Create DVD-ISO"
 msgstr "Sukurti DVD-ISO"
 
+msgid "Create directory"
+msgstr "Sukurti katalogą"
+
 msgid "Create new folder and exit"
 msgstr "Sukurti naują aplanką ir užverti"
 
@@ -2955,15 +2958,15 @@ msgstr "Ar norite pratęsti šio įrašo peržiūrą?"
 msgid "Do you want to select a different skin?"
 msgstr "Ar norite pasirinkti kitą temą?"
 
+msgid "Do you want to update the package:\n"
+msgstr "Ar norite atnaujinti paketą:\n"
+
 #, python-format
 msgid "Do you want to update your receiver to %s?"
 msgstr "Ar norite atnaujinti įrangą į %s?"
 
 msgid "Do you want to update your receiver?"
 msgstr "Ar norite atnaujinti imtuvo įrangą?"
-
-msgid "Do you want to update the package:\n"
-msgstr "Ar norite atnaujinti paketą:\n"
 
 msgid "Dolby"
 msgstr "Dolby"
@@ -3975,9 +3978,6 @@ msgstr "Graikija"
 msgid "Greek"
 msgstr "Graikų"
 
-msgid "Greek (Modern)"
-msgstr "Graikų (modernus)"
-
 msgid "Green"
 msgstr "Žalias"
 
@@ -4429,9 +4429,6 @@ msgstr "Įdiegti kanalų sąrašą"
 
 msgid "Install extensions"
 msgstr "Įdiekite išplėtimus"
-
-msgid "Install extensions."
-msgstr "Įdiekite išplėtimus."
 
 msgid "Install local extension"
 msgstr "Įdiekite vietinį išplėtimą"
@@ -5517,9 +5514,6 @@ msgstr "Norvegija"
 msgid "Norwegian"
 msgstr "Norvegų"
 
-msgid "Not defined"
-msgstr "Neapibrėžta"
-
 #, fuzzy
 msgid "Not Installed"
 msgstr "Įdiegti"
@@ -5530,6 +5524,9 @@ msgstr "Neapibrėžta"
 
 msgid "Not associated"
 msgstr "Nesusietas"
+
+msgid "Not defined"
+msgstr "Neapibrėžta"
 
 #, python-format
 msgid "Not enough disk space. Please free up some disk space and try again. (%d MB required, %d MB available)"
@@ -5599,9 +5596,6 @@ msgstr "Išjungta"
 
 msgid "Offline decode delay (ms)"
 msgstr "Dekodavimo delsa neprisijungus (ms)"
-
-msgid "Ok"
-msgstr "Gerai"
 
 msgid "Oman"
 msgstr "Omanas"
@@ -6617,6 +6611,9 @@ msgstr "Pašalinti užbaigtus laikmačius po (dienų)"
 msgid "Remove currently selected title"
 msgstr "Pašalinti dabar pasirinktą pavadinimą"
 
+msgid "Remove directory"
+msgstr "Pašalinti katalogą"
+
 msgid "Remove items from trash can after (days)"
 msgstr "Pašalinti elementus iš šiukšlinės po (dienų)"
 
@@ -6650,6 +6647,9 @@ msgstr "Pakartoti"
 
 msgid "Repeat leave standby messages"
 msgstr "Kartoti budėjimo pabaigos pranešimus"
+
+msgid "Repeat playlist"
+msgstr "Pakartoti grojaraštį"
 
 msgid "Repeat type"
 msgstr "Kartojimo tipas"
@@ -6976,8 +6976,14 @@ msgstr "Išsaugoti ir stabdyti laiko poslinkį"
 msgid "Save changes"
 msgstr "Išsaugoti pakeitimus"
 
+msgid "Save last directory on exit"
+msgstr "Užveriant išsaugoti paskutinį katalogą"
+
 msgid "Save playlist"
 msgstr "Išsaugoti grojaraštį"
+
+msgid "Save playlist on exit"
+msgstr "Užveriant išsaugoti grojaraštį"
 
 msgid "Save settings and EPG data"
 msgstr "Išsaugokite parametrus ir EPG duomenis"
@@ -7785,6 +7791,9 @@ msgstr "Rodyti paskutinius veiksmus"
 msgid "Show latest update log"
 msgstr "Rodyti paskutinio atnaujinimo žurnalą"
 
+msgid "Show media player on main menu"
+msgstr "Media grotuvą rodyti pagrindiniame meniu"
+
 msgid "Show menu or plugin numbers"
 msgstr "Rodyti meniu arba priedų numerius"
 
@@ -8127,6 +8136,9 @@ msgstr "Rūšiuoti priedų sąrašą numatytąja tvarka?"
 msgid "Sort time"
 msgstr "Rūšiuoti pagal laiką"
 
+msgid "Sorting of playlists"
+msgstr "Grojaraščių rūšiavimas"
+
 msgid "Sound"
 msgstr "Garsas"
 
@@ -8230,6 +8242,9 @@ msgstr "Ventiliatoriaus įtampa %d budėjimo režime"
 
 msgid "Standby in "
 msgstr "Į budėjimo režimą po "
+
+msgid "Start directory"
+msgstr "Pradinis katalogas"
 
 msgid "Start from the beginning"
 msgstr "Pradėti nuo pradžių"
@@ -8494,6 +8509,9 @@ msgstr "Perjungti kanalą aukštyn"
 
 msgid "Switch to TV mode"
 msgstr "Perjungti į TV režimą"
+
+msgid "Switch to bookmarks"
+msgstr "Perjungti į žymes"
 
 msgid "Switch to filelist"
 msgstr "Perjungti į failų sąrašą"
@@ -9471,6 +9489,10 @@ msgstr "Atnaujinti ir paleisti iš naujo"
 msgid "Update and reboot (recommended)"
 msgstr "Atnaujinti ir paleisti iš naujo (rekomenduojama)"
 
+#, fuzzy
+msgid "Update bookmarks"
+msgstr "Automatinės žymos"
+
 msgid "Update channel list only"
 msgstr "Atnaujinti tik kanalų sąrašą"
 
@@ -9493,11 +9515,11 @@ msgstr "Atnaujinimas baigtas."
 msgid "Updatefeed not available."
 msgstr "Atnaujinimo šaltinis nepasiekiamas."
 
-msgid "Updating software catalog"
-msgstr "Atnaujinamas programinės įrangos katalogas"
-
 msgid "Updating"
 msgstr "Atnaujinama"
+
+msgid "Updating software catalog"
+msgstr "Atnaujinamas programinės įrangos katalogas"
 
 msgid "Upper case"
 msgstr "Didžiosios raidės"
@@ -10573,14 +10595,15 @@ msgstr "apie pradžią"
 msgid "activate network adapter configuration"
 msgstr "aktyvuokite tinklo plokštės konfigūraciją"
 
+#, fuzzy
+msgid "active"
+msgstr "Santykinis"
+
 msgid "actual time only"
 msgstr "tik realus laikas"
 
 msgid "add alternatives"
 msgstr "pridėti alternatyvas"
-
-msgid "add bookmark"
-msgstr "pridėti žymą"
 
 msgid "add bouquet"
 msgstr "pridėti paketą"
@@ -10753,9 +10776,6 @@ msgstr "valgio gaminimas"
 
 msgid "copy to bouquets"
 msgstr "kopijuoti į paketus"
-
-msgid "Create directory"
-msgstr "Sukurti katalogą"
 
 msgid "daily"
 msgstr "kasdien"
@@ -11301,17 +11321,11 @@ msgstr "pašalinti visus naujai rastus žymeklius"
 msgid "remove before this position"
 msgstr "pašalinti iki šios pozicijos"
 
-msgid "remove bookmark"
-msgstr "pašalinti žymę"
-
 msgid "remove bouquet from parental protection"
 msgstr "pašalinti paketą iš tėvų kontrolės"
 
 msgid "remove cable services"
 msgstr "pašalinti kabelinius kanalus"
-
-msgid "Remove directory"
-msgstr "Pašalinti katalogą"
 
 msgid "remove entry"
 msgstr "pašalinti"
@@ -11333,9 +11347,6 @@ msgstr "pašalinti šią žymę"
 
 msgid "rename entry"
 msgstr "pervadinti"
-
-msgid "Repeat playlist"
-msgstr "Pakartoti grojaraštį"
 
 msgid "repeated"
 msgstr "pakartotinis"
@@ -11370,12 +11381,6 @@ msgstr "romansai"
 msgid "running"
 msgstr "veikia"
 
-msgid "Save last directory on exit"
-msgstr "Užveriant išsaugoti paskutinį katalogą"
-
-msgid "Save playlist on exit"
-msgstr "Užveriant išsaugoti grojaraštį"
-
 msgid "scan state"
 msgstr "paieškos eiga"
 
@@ -11384,9 +11389,6 @@ msgstr "mokslinė fantastika, fantastika, siaubai"
 
 msgid "seconds"
 msgstr "sekundžių"
-
-msgid "select"
-msgstr "pasirinkti"
 
 msgid "select CAId's"
 msgstr "pasirinkite CAId"
@@ -11420,9 +11422,6 @@ msgstr "rodyti alternatyvas"
 
 msgid "show event details"
 msgstr "rodyti įvykio detales"
-
-msgid "Show media player on main menu"
-msgstr "Media grotuvą rodyti pagrindiniame meniu"
 
 msgid "show softwaremanager in setup menu"
 msgstr "programinės įrangos tvarkyklę rodyti tarp nustatymų meniu"
@@ -11500,9 +11499,6 @@ msgstr "socialiniai/politiniai klausimai/ekonomika (bendra)"
 msgid "social/spiritual science"
 msgstr "socialinis/dvasinis mokslas"
 
-msgid "Sorting of playlists"
-msgstr "Grojaraščių rūšiavimas"
-
 msgid "special events"
 msgstr "specialieji įvykiai"
 
@@ -11521,9 +11517,6 @@ msgstr "standartinis"
 msgid "start cut here"
 msgstr "iškirpimo pradžia"
 
-msgid "Start directory"
-msgstr "Pradinis katalogas"
-
 msgid "starts in a few seconds"
 msgstr "prasidės po kelių sekundžių"
 
@@ -11538,9 +11531,6 @@ msgstr "nustoti naudoti kaip paleisties kanalą"
 
 msgid "successful"
 msgstr "sėkmingai"
-
-msgid "Switch to bookmarks"
-msgstr "Perjungti į žymes"
 
 msgid "switch to the next angle"
 msgstr "perjungti į kitą kampą"
@@ -11616,13 +11606,6 @@ msgstr "netikrintinas"
 
 msgid "until standby/restart"
 msgstr "iki budėjimo/paleidimo iš naujo"
-
-#, fuzzy
-msgid "Update bookmarks"
-msgstr "Automatinės žymos"
-
-msgid "used"
-msgstr ""
 
 msgid "user defined"
 msgstr "naudotojo nustatytas"
