--- a/po/ru.po
+++ b/po/ru.po
@@ -10563,9 +10563,8 @@ msgstr "стартует"
 msgid "activate network adapter configuration"
 msgstr "активировать конфигурацию сетевого адаптера"
 
-#, fuzzy
 msgid "active"
-msgstr "относительная"
+msgstr "активно"
 
 msgid "actual time only"
 msgstr "только фактическое время"
