updated NL translations; thanks Frenske

--- a/po/nl.po
+++ b/po/nl.po
@@ -11,7 +11,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 2.2.3\n"
+"X-Generator: Poedit 2.2.4\n"
 
 msgid ""
 "\n"
@@ -1066,9 +1066,8 @@ msgstr "Arabisch"
 msgid "Are you sure to purge all deleted userbouquets?"
 msgstr "Wilt u de gewiste bouquetten definitief verwijderen?"
 
-#, fuzzy
 msgid "Are you sure to reboot to"
-msgstr "Weet u zeker dat u dit item wilt verwijderen?"
+msgstr "Wilt u zeker herstarten naar"
 
 #, python-format
 msgid "Are you sure to remove all %d.%d%s%s services?"
@@ -8792,7 +8791,7 @@ msgstr "T2MI RAW Modus"
 msgid "TRANSLATOR_INFO"
 msgstr ""
 "Deze vertaling wordt u aangeboden door het OpenPLi team.\n"
-"Deze laatste vertaling dateert van 15 september 2019.\n"
+"Deze laatste vertaling dateert van 28 oktober 2019.\n"
 "Voor aanvullingen en opmerkingen stuurt u een mail naar\n"
 "translators@openpli.org."
 
@@ -10856,9 +10855,8 @@ msgstr "start zodadelijk"
 msgid "activate network adapter configuration"
 msgstr "Start de netwerkadapter configuratie"
 
-#, fuzzy
 msgid "active"
-msgstr "Relatief"
+msgstr "actief"
 
 msgid "actual time only"
 msgstr "enkel de actuele tijd"
