Solve typos in Dutch Translation
De image -> Het image
revovory -> Recovery

--- a/po/nl.po
+++ b/po/nl.po
@@ -1449,7 +1449,7 @@ msgid "Boot to Android image"
 msgstr "Start op met Android"
 
 msgid "Boot to Recovery menu"
-msgstr "Start op met het revovery-menu"
+msgstr "Start op met het recovery menu"
 
 msgid "Bosnia and Herzegovina"
 msgstr "Bosnië Herzegovina"
@@ -3187,7 +3187,7 @@ msgid "Downloading"
 msgstr "Bezig met downloaden"
 
 msgid "Downloading Image"
-msgstr "De image wordt gedownload"
+msgstr "Het image wordt gedownload"
 
 msgid "Downloading plugin information. Please wait..."
 msgstr "Applicatie informatie ophalen. Een ogenblik aub..."
@@ -3917,7 +3917,7 @@ msgid "Flash image"
 msgstr "Image flashen"
 
 msgid "Flashing Image"
-msgstr "De image wordt geflasht"
+msgstr "Het image wordt geflasht"
 
 msgid "Flashing image successful"
 msgstr "Het flashen van de image is gelukt."
@@ -9695,7 +9695,7 @@ msgid "Unsupported"
 msgstr "Niet ondersteund"
 
 msgid "Unzipping Image"
-msgstr "De image wordt uitgepakt"
+msgstr "Het image wordt uitgepakt"
 
 msgid "Update"
 msgstr "Update"
