all po files updated from develop at 2019-10-31 04:11

--- a/po/hr.po
+++ b/po/hr.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-10-26 09:34+0200\n"
-"PO-Revision-Date: 2019-10-07 09:58+0200\n"
+"POT-Creation-Date: 2019-10-31 04:08+0100\n"
+"PO-Revision-Date: 2019-10-31 04:11+0100\n"
 "Last-Translator: Željko <zeljko2@hi.ht.hr>\n"
 "Language-Team: Željko\n"
 "Language: hr_HR\n"
@@ -11,7 +11,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
-"X-Generator: Poedit 2.2.4\n"
+"X-Generator: Poedit 2.2.3\n"
 
 msgid ""
 "\n"
@@ -1744,9 +1744,6 @@ msgstr "Kanali"
 msgid "Channels and EPG"
 msgstr "Kanali i EPG"
 
-msgid "Channels only"
-msgstr "Samo kanale"
-
 msgid "Chap."
 msgstr "Pogl."
 
@@ -3046,9 +3043,6 @@ msgstr "Odaberite jezik za EPG 1"
 msgid "EPG language selection 2"
 msgstr "Odaberite jezik za EPG 2"
 
-msgid "EPG only"
-msgstr "Samo EPG"
-
 msgid "EPG selection"
 msgstr "EPG izbor"
 
@@ -4297,11 +4291,11 @@ msgstr "Image: "
 msgid "Import channels and/or EPG from remote receiver URL also when the receiver is getting out of standby"
 msgstr "Uvezite kanale i/ili EPG iz URL-a udaljenog primatelja i kada prijemnik izlazi iz stanja mirovanja"
 
-msgid "Import channels and/or EPG from remote receiver URL when receiver is booted"
-msgstr "Uvezite kanale i/ili EPG iz udaljenog URL-a primatelja kada se on pokrene."
-
 msgid "Import channels and/or EPG from remote receiver URL when receiver or enigma2 is restarted"
 msgstr "Uvoz kanala i/ili EPG iz URL-a udaljenog primatelja kada se prijemnik ili enigma2 ponovno pokrene"
+
+msgid "Import channels from remote receiver URL when receiver is booted"
+msgstr "Uvezite kanale iz udaljenog URL-a primatelja kada se on pokrene."
 
 #, python-format
 msgid "Import from fallback tuner failed, %s"
@@ -10563,9 +10557,8 @@ msgstr "počinje"
 msgid "activate network adapter configuration"
 msgstr "aktivirati konfiguraciju mrežnog adaptera"
 
-#, fuzzy
 msgid "active"
-msgstr "Relativno"
+msgstr "aktivan"
 
 msgid "actual time only"
 msgstr "samo stvarno vrijeme"
