--- a/po/nl.po
+++ b/po/nl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-10-26 09:34+0200\n"
+"POT-Creation-Date: 2019-10-31 04:08+0100\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Frenske <voorzitter@openpli.org>\n"
 "Language-Team: PLiteam <translators@openpli.org>\n"
@@ -1739,9 +1739,6 @@ msgstr "Zenders"
 msgid "Channels and EPG"
 msgstr "Zenders + EPG"
 
-msgid "Channels only"
-msgstr "Alléén de zenders"
-
 msgid "Chap."
 msgstr "Hfdst."
 
@@ -3216,9 +3213,6 @@ msgstr "Eerste taalkeuze t.b.v. de EPG weergave"
 msgid "EPG language selection 2"
 msgstr "Tweede taalkeuze t.b.v. de EPG weergave"
 
-msgid "EPG only"
-msgstr "Alléén de EPG"
-
 msgid "EPG selection"
 msgstr "EPG selectie"
 
@@ -4480,14 +4474,15 @@ msgstr "Image: "
 msgid "Import channels and/or EPG from remote receiver URL also when the receiver is getting out of standby"
 msgstr "Indien geactiveerd, dan importeert u de zenders en/of de EPG vanaf de de externe ontvanger als de ontvanger uit standby komt?"
 
-msgid "Import channels and/or EPG from remote receiver URL when receiver is booted"
+msgid "Import channels and/or EPG from remote receiver URL when receiver or enigma2 is restarted"
+msgstr "Indien geactiveerd, dan importeert u de zenders en/of de EPG vanaf de de externe ontvanger als de ontvanger of enigma2 is herstart."
+
+#, fuzzy
+msgid "Import channels from remote receiver URL when receiver is booted"
 msgstr ""
 "Met deze optie geeft u aan wat u wilt importeren vanaf de externe ontvanger na een herstart.\n"
 "\n"
 "U kunt kiezen uit niets, alléén de zenders, zenders + EPG of alléén de EPG."
-
-msgid "Import channels and/or EPG from remote receiver URL when receiver or enigma2 is restarted"
-msgstr "Indien geactiveerd, dan importeert u de zenders en/of de EPG vanaf de de externe ontvanger als de ontvanger of enigma2 is herstart."
 
 #, python-format
 msgid "Import from fallback tuner failed, %s"
